--- a/index.html
+++ b/index.html
@@ -1,9 +1,174 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>Contact Form</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    body,html{
+      width: 100%;
+      height: 100%;
+    }
+    #Logo {
+      width: 55px;
+      height: 55px;
+    }
+
+    .carousel-inner {
+      height: 400px;
+    }
+
+    .carousel-inner img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+    #contact{
+      background:linear-gradient(gray,black);
+      margin-bottom: 5px;
+    }
+
+  
+
+    #makeover-child {
+      background-image: url('./public/makeover.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+    }
+
+    #makeover-child-2 {
+      background-image: url('./public/Haircut-2.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+    }
+
+    #makeover-child-3 {
+      background-image: url('./public/NailArt.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+    }
+
+    #Maketext {
+      position: absolute;
+      top: 90px;
+      color: rgb(10, 10, 10);
+      left: 950px;
+      box-shadow: 2px 2px 5px rgb(146, 111, 111);
+      background: linear-gradient(rgb(178, 186, 193), rgb(33, 12, 22));
+      border-radius: 5px;
+      padding: 5px;
+    }
+    #brandName {
+      font-weight: bold;
+    }
+    @media (max-width: 768px) {
+      .carousel-inner {
+        height: 250px;
+      }
+      #Maketext {
+        position: absolute;
+        top: 90px;
+        color: rgb(0, 0, 0);
+        background: linear-gradient(rgb(178, 186, 193), rgb(33, 12, 22));
+        left: 450px;
+        box-shadow: 2px 2px 5px rgb(146, 111, 111);
+        border-radius: 5px;
+        padding: 5px;
+      }
+    }
+    @media (max-width: 576px) {
+      .carousel-inner {
+        height: 350px;
+      }
+      #Maketext {
+        position: absolute;
+        top: 90px;
+        color: rgb(0, 0, 0);
+        background: linear-gradient(rgb(178, 186, 193), rgb(33, 12, 22));
+        left: 250px;
+        box-shadow: 2px 2px 5px rgb(146, 111, 111);
+        border-radius: 5px;
+        padding: 5px;
+      }
+      
+    }
+  </style>
+  
+  
+
+
 </head>
-<body>
+<!-- Head Start  -->
+
+<body class="container-fluid">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+      <span class="navbar-brand"><a href="#"><img id="Logo" class="border border-2 rounded rounded-2 "
+            src="./public/Preety-Logo.png" alt="Preety-Looks-Logo"></a> <span id="brandName">Preety Looks</span> </span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Image</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Head End  -->
+
+  <div class="carousel slide mb-2 " data-bs-ride="carousel" data-bs-theme="dark" id="banners">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="3000" id="parent-make">
+        <div id="makeover">
+          <div id="makeover-child">
+            <div id="Maketext">
+              <h3>All Type Makeup</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item " data-bs-interval="3000">
+        <div id="makeover">
+          <div id="makeover-child-2">
+            <div id="Maketext">
+              <h3>Hair Cutting</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <div id="makeover">
+          <div id="makeover-child-3">
+            <div id="Maketext">
+              <h3>Nail Art</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#banners">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#banners">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+    <div class="carousel-indicators">
+      <button class="active" data-bs-slide-to="0" data-bs-target="#banners"></button>
+      <button data-bs-slide-to="1" data-bs-target="#banners"></button>
+      <button data-bs-slide-to="2" data-bs-target="#banners"></button>
+
+    </div>
+  </div>
   <h1>Contact Us</h1>
   <form action="https://formsubmit.co/webdownload9615@gmail.com" method="POST">
     <input type="text" name="name" placeholder="Your Name" required><br>
