--- a/index.html
+++ b/index.html
@@ -1,77 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-
-  
+  <title>Contact Form</title>
 </head>
-<!-- Head Start  -->
-
-<body class="container-fluid">
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <div class="container-fluid">
-      <span class="navbar-brand"><a href="#"><img id="Logo" class="border border-2 rounded rounded-2 "
-            src="./public/Preety-Logo.png" alt="Preety-Looks-Logo"></a> <span id="brandName">Preety Looks</span> </span>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="menu">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Image</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- Head End  -->
-
-  <div class="carousel slide mb-2 " data-bs-ride="carousel" data-bs-theme="dark" id="banners">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="3000" id="parent-make">
-        <div id="makeover">
-          <div id="makeover-child">
-            <div id="Maketext">
-              <h3>All Type Makeup</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item " data-bs-interval="3000">
-        <div id="makeover">
-          <div id="makeover-child-2">
-            <div id="Maketext">
-              <h3>Hair Cutting</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <div id="makeover">
-          <div id="makeover-child-3">
-            <div id="Maketext">
-              <h3>Nail Art</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#banners">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#banners">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-    <div class="carousel-indicators">
-      <button class="active" data-bs-slide-to="0" data-bs-target="#banners"></button>
-      <button data-bs-slide-to="1" data-bs-target="#banners"></button>
-      <button data-bs-slide-to="2" data-bs-target="#banners"></button>
-
-    </div>
-  </div>
+<body>
   <h1>Contact Us</h1>
   <form action="https://formsubmit.co/webdownload9615@gmail.com" method="POST">
     <input type="text" name="name" placeholder="Your Name" required><br>
