updated form or design

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
   
 
     #makeover-child {
-      background-image: url('./public/makeover.jpg');
+      background-image: url('https://plus.unsplash.com/premium_photo-1682098317954-252ddfcda75e?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d29tZW5zJTIwaGFpcmN1dHxlbnwwfHwwfHx8MA%3D%3D');
       background-size: cover;
       background-position: center;
       height: 100vh;
     }
 
     #makeover-child-2 {
-      background-image: url('./public/Haircut-2.jpg');
+      background-image: url('https://plus.unsplash.com/premium_photo-1682098317954-252ddfcda75e?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d29tZW5zJTIwaGFpcmN1dHxlbnwwfHwwfHx8MA%3D%3D0');
       background-size: cover;
       background-position: center;
       height: 100vh;
     }
 
     #makeover-child-3 {
-      background-image: url('./public/NailArt.jpg');
+      background-image: url('https://plus.unsplash.com/premium_photo-1682098317954-252ddfcda75e?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d29tZW5zJTIwaGFpcmN1dHxlbnwwfHwwfHx8MA%3D%3D');
       background-size: cover;
       background-position: center;
       height: 100vh;
