--- a/index.html
+++ b/index.html
@@ -98,13 +98,113 @@
     }
   </style>
 </head>
-<body>
-  <h1>Contact Us</h1>
-  <form action="https://formsubmit.co/webdownload9615@gmail.com" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required><br>
-    <input type="email" name="email" placeholder="Your Email" required><br>
-    <textarea name="message" placeholder="Your Message" required></textarea><br>
-    <button type="submit">Send</button>
-  </form>
-</body>
-</html>
+
+<body class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container-fluid">
+        <span class="navbar-brand"><a href="#"><img id="Logo" class="border border-2 rounded rounded-2 "
+              src="./public/Preety-Logo.png" alt="Preety-Looks-Logo"></a> <span id="brandName">Preety Looks</span> </span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="menu">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Image</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Head End  -->
+  
+    <div class="carousel slide mb-2 " data-bs-ride="carousel" data-bs-theme="dark" id="banners">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="3000" id="parent-make">
+          <div id="makeover">
+            <div id="makeover-child">
+              <div id="Maketext">
+                <h3>All Type Makeup</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item " data-bs-interval="3000">
+          <div id="makeover">
+            <div id="makeover-child-2">
+              <div id="Maketext">
+                <h3>Hair Cutting</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <div id="makeover">
+            <div id="makeover-child-3">
+              <div id="Maketext">
+                <h3>Nail Art</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#banners">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#banners">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+      <div class="carousel-indicators">
+        <button class="active" data-bs-slide-to="0" data-bs-target="#banners"></button>
+        <button data-bs-slide-to="1" data-bs-target="#banners"></button>
+        <button data-bs-slide-to="2" data-bs-target="#banners"></button>
+  
+      </div>
+    </div>
+  
+    <!-- Book Appointment -->
+     <div class="text-center  p-3" id="contact" >
+      <h3 class="text-white">Contact Us</h3>
+     </div>
+    <form >
+      <div class="p-4 bg-dark">
+        <div >
+          <div class="input-group mb-2">
+            <span class="input-group-text">Name</span>
+            <input type="text" name="name" id="name" placeholder="Enter Here Name" class="form-control" required>
+          </div>
+          <div class="input-group mb-2">
+            <span class="input-group-text">Mobile</span>
+            <input type="text" name="number" id="number" placeholder="Enter Here Phone Number" class="form-control" required>
+  
+          </div>
+          <div class="input-group mb-2">
+            <span class="input-group-text">Email</span>
+            <input type="email" id="email" name="email" class="form-control" placeholder="Email" required >
+          </div>
+          <div class="text-end">
+            <input type="hidden" name="_captcha" value="false">
+  
+  
+            
+  
+            <button type="submit" class="btn btn-primary ">Submit</button>
+          </div>
+  
+        </div>
+      </div>
+  
+    </form>
+  
+    <div class="text-center">
+      <h3>Location Map</h3>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3357.7782713699685!2d85.8319517!3d19.811434900000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a19c741de9ed88d%3A0xce383ebe877857c6!2sPreety%20Looks%20Beauty%20Salon!5e1!3m2!1sen!2sin!4v1745476128184!5m2!1sen!2sin" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  
+      </div>
+    </div>
+  
+  
+  </body>
+  
+  </html>
