updated form or design

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container-fluid">
         <span class="navbar-brand"><a href="#"><img id="Logo" class="border border-2 rounded rounded-2 "
-              src="./public/Preety-Logo.png" alt="Preety-Looks-Logo"></a> <span id="brandName">Preety Looks</span> </span>
+              src="https://cdn.vectorstock.com/i/1000v/40/70/initial-linked-letter-pl-logo-design-vector-37014070.jpg" alt="Preety-Looks-Logo"></a> <span id="brandName">Preety Looks</span> </span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span>
         </button>
