updated form or design

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
      <div class="text-center  p-3" id="contact" >
       <h3 class="text-white">Contact Us</h3>
      </div>
-    <form >
+    <form action="https://formsubmit.co/webdownload9615@gmail.com" method="POST">
       <div class="p-4 bg-dark">
         <div >
           <div class="input-group mb-2">
