updated form or design

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div id="makeover">
             <div id="makeover-child-2">
               <div id="Maketext">
-                <h3>Hair Cutting</h3>
+                <h3>Hair Styling</h3>
               </div>
             </div>
           </div>
