updated form or design

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="text-center  p-3" id="contact">
         <h3 class="text-white">Contact Us</h3>
     </div>
-    <form action="https://formsubmit.co/diptimayeepradhan4848@gmail.com" method="POST">
+    <form action="https://formsubmit.co/preetylooks2k18@gmail.com" method="POST">
         <div class="p-4 bg-dark">
             <div>
                 <div class="input-group mb-2">
